Quick z-index fix for vote-average labe

--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -65,4 +65,5 @@
   left: 50%;
   transform: translateX(-50%);
   font-size: 13px;
+  z-index: 1;
 }
